...
                        <rightBarButtonItems>
                            <barButtonItem systemItem="organize" id="iMW-ue-dD0">
                                <connections>
                                    <action selector="open:" destination="BYZ-38-t0r" id="hyf-0D-CqN"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="URL" id="Pjc-q4-tbP">
                                <connections>
                                    <action selector="openURL:" destination="BYZ-38-t0r" id="SOL-8K-8AI"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
